tests/fixtures/invalid/unknown_function.moss
fn main
    output greet("ada")
